done my work: jaydip

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT=4000
-MONGO_URI=mongodb+srv://amanatar311_db_user:Aman9922@cluster0.jphfxce.mongodb.net/tours_booking?appName=Cluster0
+# MONGO_URI=mongodb+srv://amanatar311_db_user:Aman9922@cluster0.jphfxce.mongodb.net/tours_booking?appName=Cluster0
+MONGO_URI=mongodb://localhost:27017/travlingApp
 JWT_SECRET_KEY=mndkmndnkamndkm1d12s1d21d112
